# plane-mcp-redux

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-DECLARATION.md  CONTRIBUTING.md  FASTMCP_PATTERNS.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  SUMMARY.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.pi/: settings.json
.pi/plans/: API_TEST_RESULTS.md  DEVELOPMENT_PLAN.md  README.md  SESSION_CHECKLIST.md  UUID_AND_DEPENDENCY_GUIDE.md
.pi/prompts/: review.md  test.md
docs/: DOCUMENTATION_STATUS.md  SDK_COVERAGE.md
docs/makeplane_plane-python-sdk/: CLI_COMPLETE.md  CRUD_MINIMUM_FIELDS.md  FASTMCP_IMPLEMENTATION_PLAN.md  FASTMCP_TOOL_DESIGN.md  FASTMCP_WORKFLOW_DESIGN.md  INDEX.md  INVESTIGATION_STRATEGY.md  SESSION_SUMMARY.md  WORKSPACES_API.md
docs/makeplane_plane-python-sdk/planning/: SDK_API_MAPPING.md
docs/makeplane_plane-python-sdk/workspace/: STICKIES.md  TEMPLATE.md
docs/makeplane_plane-python-sdk/workspace/projects/: CYCLES.md  LABELS.md  MODULES.md  PAGES.md  README.md  TEST_SETUP_SCRIPT.py  WORK_ITEMS.md
src/plane_mcp/: __init__.py  cli.py  client.py  main.py  server.py
src/plane_mcp_server/: __init__.py  server.py
tests/: __init__.py  test_integration.py  test_server.py
